--- a/didactic-winner.xcodeproj/xcshareddata/xcschemes/didactic-winner.xcscheme
+++ b/didactic-winner.xcodeproj/xcshareddata/xcschemes/didactic-winner.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "5BF21FC0268C456A0095B3C1"
+            BuildableName = "didactic-winner.app"
+            BlueprintName = "didactic-winner"
+            ReferencedContainer = "container:didactic-winner.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
